--- a/user/public/style.css
+++ b/user/public/style.css
@@ -1,12 +1,15 @@
 body {
-    padding: 1rem;
-    padding-top: 3rem;
+    padding-top: 4rem;
 }
 
-#url-input {
-    margin-bottom: 10px;
+#navbar {
+    background-color: #4a008a;
 }
 
-#verifyPromptCard {
-    padding: 1rem;
+#alert-box {
+    width: 100%;
+}
+
+#page-content {
+    padding-top: 4rem;
 }
